<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textNomeFazenda"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/largeMargin"
        app:boxBackgroundColor="@color/black"
        android:textColorHint="@color/branco_nexus"
        app:boxStrokeColor="@color/nexus"
        app:placeholderTextColor="@color/nexus"
        app:hintTextColor="@color/nexus"
        android:outlineSpotShadowColor="@color/nexus"
        app:counterTextColor="@color/nexus"
        android:outlineAmbientShadowColor="@color/nexus"
        app:boxStrokeErrorColor="@color/nexus"
        app:counterOverflowTextColor="@color/nexus"
        app:errorTextColor="@color/nexus"
        app:helperTextTextColor="@color/nexus"
        app:prefixTextColor="@color/nexus"
        app:suffixTextColor="@color/nexus"
        app:passwordToggleTint="@color/nexus"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textColorHighlight="@color/nexus"
            android:textColor="@color/nexus"
            android:textColorHint="@color/nexus"
            android:inputType="text"
            android:outlineAmbientShadowColor="@color/nexus"
            android:shadowColor="@color/nexus"
            android:outlineSpotShadowColor="@color/nexus"
            android:textColorLink="@color/nexus"
            android:textCursorDrawable="@null"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/spinnerIrrigacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textInputNome"
        app:layout_constraintStart_toStartOf="parent"
        >



    <TextView
        android:id="@+id/spinnerTitleIrrigacao"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="left"
        android:textColor="@color/nexus"
        android:padding="5dip"
        android:text="@string/textIrrigacao"
        android:layout_weight="2"
        />
    <Spinner
        android:id="@+id/spinnerIrrigacaoItens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerTitleIrrigacao"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/nexus"
        android:layout_weight="1"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinnerNutrientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/spinnerIrrigacao"
        app:layout_constraintStart_toStartOf="parent"
        >


    <TextView
        android:id="@+id/spinnerTitleNutrientes"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="left"
        android:layout_weight="2"
        android:textColor="@color/nexus"
        android:padding="5dip"
        android:text="@string/textNutrientes"
        />
    <Spinner
        android:layout_weight="1"
        android:id="@+id/spinnerNutrientesItens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/nexus"
        />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCultura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textNomeCultura"
        app:layout_constraintTop_toBottomOf="@id/spinnerNutrientes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/largeMargin"
        app:boxBackgroundColor="@color/black"
        android:textColorHint="@color/branco_nexus"
        app:boxStrokeColor="@color/nexus"
        app:placeholderTextColor="@color/nexus"
        app:hintTextColor="@color/nexus"
        android:outlineSpotShadowColor="@color/nexus"
        app:counterTextColor="@color/nexus"
        android:outlineAmbientShadowColor="@color/nexus"
        app:boxStrokeErrorColor="@color/nexus"
        app:counterOverflowTextColor="@color/nexus"
        app:errorTextColor="@color/nexus"
        app:helperTextTextColor="@color/nexus"
        app:prefixTextColor="@color/nexus"
        app:suffixTextColor="@color/nexus"
        app:passwordToggleTint="@color/nexus"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditCultura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textColorHighlight="@color/nexus"
            android:textColor="@color/nexus"
            android:textColorHint="@color/nexus"
            android:inputType="text"
            android:outlineAmbientShadowColor="@color/nexus"
            android:shadowColor="@color/nexus"
            android:outlineSpotShadowColor="@color/nexus"
            android:textColorLink="@color/nexus"
            android:textCursorDrawable="@null"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPragas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textNomePragas"
        app:layout_constraintTop_toBottomOf="@id/textInputCultura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/largeMargin"
        app:boxBackgroundColor="@color/black"
        android:textColorHint="@color/branco_nexus"
        app:boxStrokeColor="@color/nexus"
        app:placeholderTextColor="@color/nexus"
        app:hintTextColor="@color/nexus"
        android:outlineSpotShadowColor="@color/nexus"
        app:counterTextColor="@color/nexus"
        android:outlineAmbientShadowColor="@color/nexus"
        app:boxStrokeErrorColor="@color/nexus"
        app:counterOverflowTextColor="@color/nexus"
        app:errorTextColor="@color/nexus"
        app:helperTextTextColor="@color/nexus"
        app:prefixTextColor="@color/nexus"
        app:suffixTextColor="@color/nexus"
        app:passwordToggleTint="@color/nexus"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditPragas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textColorHighlight="@color/nexus"
            android:textColor="@color/nexus"
            android:textColorHint="@color/nexus"
            android:inputType="text"
            android:outlineAmbientShadowColor="@color/nexus"
            android:shadowColor="@color/nexus"
            android:outlineSpotShadowColor="@color/nexus"
            android:textColorLink="@color/nexus"
            android:textCursorDrawable="@null"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/cadastroButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastroFazenda"
        app:layout_constraintTop_toBottomOf="@id/textInputPragas"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/nexus"/>

</androidx.constraintlayout.widget.ConstraintLayout>